In HandleCSV.Write() at casting object data into a list of products I changed the casting to be dynamic so that it resolves itself at runtime.   Writing to csv now works but need to be looked at to make no data is lost. - Andreas Brunnstrom

--- a/src/FileConverter/Properties/launchSettings.json
+++ b/src/FileConverter/Properties/launchSettings.json
@@ -1,7 +1,8 @@
 {
   "profiles": {
     "FileConverter": {
-      "commandName": "Project"
+      "commandName": "Project",
+      "commandLineArgs": "--i Template.xml --o test.csv"
     }
   }
 }
