--- a/src/FileConverter/Properties/launchSettings.json
+++ b/src/FileConverter/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "FileConverter": {
       "commandName": "Project",
-      "commandLineArgs": "--i Template.json --o test.json"
+      "commandLineArgs": "--i Template.csv--o test.csv"
     }
   }
 }
